# StatArb_Gemini

./: .env.example  .gitignore  ARCHITECTURE_MIGRATION_PLAN.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_SUMMARY.md  CLEAN_ARCHITECTURE_SUMMARY.md  CODEBASE_CLEANUP_COMPLETE.md  CODEBASE_CLEANUP_SUMMARY.md  CORE_SYSTEM_INTEGRATION_GAPS_ANALYSIS.md  DATA_CONFIGURATION_GUIDE.md  ENGINE_REPLACEMENT_COMPLETE.md  EXECUTION_ENGINE_CLEANUP_COMPLETE.md  FINAL_CLEANUP_SUMMARY.md  PHASE1_INFRASTRUCTURE_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  PRODUCTION_SAFETY_IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  REUSABLE_FRAMEWORK_GUIDE.md  ROOT_CLEANUP_SUMMARY.md  SCRIPT_RELATIONSHIP_ANALYSIS.md  STAT_ARB_MODEL_MILESTONE.md  STRATEGY_SUPPORT_STATUS.md  TECHNICAL_INDICATORS_INTEGRATION_PLAN.md  broker.env  check_available_symbols.py  check_prices.py  clickhouse_pair_screening.py  commit_phase1-4.sh  coverage_analyzer.py  debug_vnet_gds.py  deep_symbol_check.py  demo_clickhouse_integration_success.py  demo_market_condition_analytics.py  demo_real_historical_analytics.py  deploy.sh  docker-compose.yml  download_historical_indicators.py  enhanced_backtesting_with_indicators.py  enhanced_pair_trading_with_indicators.py  (+27 more)
Tests/: README.md  __init__.py
analysis/: ai_infrastructure_analysis.py  infrastructure_analysis.py  signal_generation_analysis.py
archived_docs/: DEPLOYMENT_SUCCESS_SUMMARY.md  FINAL_PERFORMANCE_RESULTS.md  PERFORMANCE_COMPARISON_ANALYSIS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  VALIDATED_PERFORMANCE_RESULTS.md
archived_optimization/: deploy_optimization.py  direct_integration_wrapper.py  integration_example.py  optimized_advanced_momentum_backtest.py  production_optimization_launcher.py
backtest/: ARCHITECTURE.txt  __init__.py  (+12 more)
(+3567 files in other folders)
